fix(hero): Hiding overflowing gradient circle in hero section on mobile

--- a/src/styles/pages/home/hero.scss
+++ b/src/styles/pages/home/hero.scss
@@ -8,6 +8,7 @@ $hero-max-width-text: 48ch;
 
 .hero {
   position: relative;
+  overflow: hidden;
   background-color: vars.$primary-100;
 
   .gradient-circle {
